Fix horizontal scrolling on mobile homepage (yet again)

--- a/css/styles.css
+++ b/css/styles.css
@@ -2746,7 +2746,9 @@ article.illustrated footer .date-unit {
 .masthead .title {
     /* Stack title above the illustration and gradient. */
     position: relative;
-    z-index: 2; 
+    z-index: 2;
+    /* Prevent horizontal scrolling on mobile, e.g. on homepage. */
+    overflow-x: hidden; 
     /*** The title-and-teaser wrapper.
      ***/
     padding-top: 135px;
